improve v2-boost.py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,11 @@ cmake_minimum_required(VERSION 3.5...3.16)
 
 project(boost_openmethod VERSION 1.87.0 LANGUAGES CXX)
 
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 17)
+endif()
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_library(boost_openmethod INTERFACE)
 add_library(Boost::openmethod ALIAS boost_openmethod)
 
