--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,9 +125,14 @@ install(EXPORT YOMM2Targets
   NAMESPACE YOMM2::
   DESTINATION lib/cmake/YOMM2
 )
+# Configure package config (tells using code about dependencies)
+configure_package_config_file(
+  cmake/YOMM2Config.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/YOMM2Config.cmake
+  INSTALL_DESTINATION lib/cmake/YOMM2
+)
 # Copy config files to install directory
 install(FILES
-  "YOMM2Config.cmake"
+  "${CMAKE_CURRENT_BINARY_DIR}/YOMM2Config.cmake"
   "${CMAKE_CURRENT_BINARY_DIR}/YOMM2ConfigVersion.cmake"
   DESTINATION lib/cmake/YOMM2
 )
